# watched.agent

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: FindAsio.cmake  FindDBusCpp.cmake  FindJsoncpp.cmake  systemdservice.cmake
collectors/: cpuload.cpp  cpuspeed.cpp  cpuuse.cpp  diskstats.cpp  diskusage.cpp  memory.cpp  netdev.cpp  thermal.cpp  uptime.cpp  vmstat.cpp
debian/: changelog  control
include/: agent.h  central.h  collectors.h  common.h  config.h.in  services.h
luaCollectors/: cpuload.lua  cpuspeed.lua  uptime.lua
luaServices/: apacheError.lua  cpu.lua  cupsError.lua  daemonlog.lua  enhance_core.lua  io.lua  kernLog.lua  mem.lua  self.lua  syslog.lua
services/: cpu.cpp  io.cpp  mem.cpp  system.cpp  systemd.cpp
services/sdbus/: systemdbus.cpp
src/: agent.cpp  collectors.cpp  config.cpp  log.cpp  luacollectors.cpp  server.cpp  service.cpp  services.cpp  servicesManager.cpp
sws/: client_http.hpp  client_https.hpp  server_http.hpp  server_https.hpp
tools/conf/: agent.config.json.in
tools/logrotate/: watched.in
tools/systemd/: watched.agent.service.in
tools/travis/: installdeps.sh
webroot/css/: watched.css
webroot/js/: watched.js  watched.line.js
